RESOLVED FIXED178738
WebAssembly: NFC renames of things that aren't JS-specific
https://bugs.webkit.org/show_bug.cgi?id=178738
Summary WebAssembly: NFC renames of things that aren't JS-specific
JF Bastien
Reported 2017-10-24 11:13:50 PDT
Don't call it "JS" if it's not always JS.
Attachments
patch (12.97 KB, patch)
2017-10-24 11:19 PDT, JF Bastien
no flags
JF Bastien
Comment 1 2017-10-24 11:19:22 PDT
WebKit Commit Bot
Comment 2 2017-10-24 11:55:55 PDT
Comment on attachment 324687 [details] patch Clearing flags on attachment: 324687 Committed r223907: <https://trac.webkit.org/changeset/223907>
WebKit Commit Bot
Comment 3 2017-10-24 11:55:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-15 13:01:27 PST
Note You need to log in before you can comment on or make changes to this bug.